<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clickaLargoParaFavorito"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hoja_cuaderno"
    android:orientation="vertical"
    tools:context=".ui.DetalleFragmentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkboxFavorito"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:button="@drawable/selector_fav_item"
            app:useMaterialThemeColors = "false"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/tvDetalleHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:text="@string/hora"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvDetalleLatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="5dp"
        android:text="@string/latitud"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDetalleLongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/longitud"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDetalleProfundidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="5dp"
        android:text="@string/produnfidad"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDetalleMagnitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/magnitud"

        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDetalleReferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="5dp"
        android:text="@string/referencia"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="35dp"
        android:text="@string/mapa"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivMapaDetalle"
        android:layout_width="200dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contDescrip"
        android:src="@drawable/ic_mapa" />

</LinearLayout>

